--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up Ruby 2.5
-      uses: actions/setup-ruby@v1.1.3
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.5.x
+        ruby-version: '2.5'
     - name: Build and test with Rake
       run: |
         gem install bundler
