--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,6 @@
 require:
   - rubocop-rspec
+  - rubocop-rake
 
 AllCops:
   NewCops: enable
@@ -15,7 +16,6 @@ Layout/HashAlignment:
 
 Metrics/BlockLength:
   Max: 35
-  IgnoredMethods: [ 'describe' ]
 
 Metrics/MethodLength:
   Max: 25
